--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -16,12 +16,14 @@
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
+        width: 700px;
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        width: 500px;
     }
 }
 
@@ -135,4 +137,47 @@
     border-radius: 1rem;
     padding: .25rem .5rem;
 
+}
+
+
+
+.info-btn {
+    background-image: url('/assets/img/pokedex.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    width: 38px;
+    height: 30px;
+    cursor: pointer;
+}
+
+
+.detail {
+    display: flex;
+    justify-content: center; /* alinha horizontalmente */
+}
+
+.pokemonImageDetail {
+    max-width: 200px;
+}
+
+
+.PokedexBackground {
+    /* Background Image   */
+    /*background-image: url('/assets/img/ash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    */
+
+    background-color: rgba(0, 0, 0, 0.1); 
+    background-blend-mode: overlay;
+
+    height: 800px; 
+    overflow-y: auto;
+    padding: 1rem;
+
+    max-width: 900px;
+    padding-left: 20px;
 }
