Add Pokemon Base Stats bar to show Pokemon battle data.

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -23,7 +23,7 @@
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
-        width: 500px;
+        width: 32rem;
     }
 }
 
@@ -174,7 +174,7 @@
     background-color: rgba(0, 0, 0, 0.1); 
     background-blend-mode: overlay;
 
-    height: 800px; 
+    height: 55rem; 
     overflow-y: auto;
     padding: 1rem;
 
