--- a/assets/css/pokemonDetails.css
+++ b/assets/css/pokemonDetails.css
@@ -1,5 +1,4 @@
 
-
 .PokemonShowDetail {
     padding: 10px;
 }
@@ -22,8 +21,7 @@
 
 
 .PokemonShowDetail .detail .types {
-    padding: 0;
-    margin: 0;
+    padding-left: 0px;
     list-style: none;
 }
 
@@ -33,7 +31,7 @@
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .685rem;
     text-align: center;
 
     filter: brightness(1.1);
@@ -71,8 +69,7 @@
 }
 
 .PokedexBackground {
-    flex: 1 1 400px; 
-    max-width: 500px;
+    flex: 1 1 400px;
     background-color: #f5f5f5;
     padding: 1rem;
     border-radius: 10px;
@@ -86,8 +83,8 @@
     border: 1px solid #ddd;
     border-radius: 8px;
 
-    width: 300px;
-    height: 500px;
+    width: 25rem;
+    height: 45rem;
 }
 
 .detail, .extra-info {
@@ -108,15 +105,131 @@
 .info-item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .info-item dt {
     font-weight: bold;
     color: #555;
+    width: 100px; /* largura fixa opcional */
 }
 
 .info-item dd {
     margin: 0;
-    text-align: right;
+    flex: 1;
+    text-align: left;
     color: #333;
+}
+
+
+/*  Tabs CSS  */
+.tabs {
+    padding: 16px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins', sans-serif;
+}
+
+.tab-buttons {
+    display: flex;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 12px;
+}
+
+.tab-btn {
+    flex: 1;
+    padding: 10px 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-weight: 500;
+    color: #777;
+    transition: all 0.25;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.tab-btn.active {
+    color: #2a75bb;
+    border-bottom: 3px solid #2a75bb;
+    font-weight: 600;
+}
+
+.tab-content {
+    display: none;
+    animation: fadeIn 0.3s ease-in-out;
+
+}
+
+.tab-content.active {
+    display: block;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+dl {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  gap: 8px;
+  margin: 0;
+}
+
+dt {
+  font-weight: bold;
+  color: #444;
+}
+
+dd {
+  margin: 0;
+  color: #555;
+}
+
+
+/* Css for Pokemon Base Stats */
+.stats-list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-top: 8px;
+}
+
+.stat-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.stat-name {
+  width: 90px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.stat-bar {
+  flex: 1;
+  height: 6px;
+  background-color: #e0e0e0;
+  border-radius: 3px;
+  margin: 0 8px;
+  overflow: hidden;
+}
+
+.stat-bar .fill {
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 3px;
+  transition: width 0.4s ease;
+}
+
+.stat-value {
+  width: 40px;
+  text-align: right;
+}
+
+.stat-item.total {
+  margin-top: 8px;
+  font-weight: bold;
+  border-top: 1px solid #ccc;
+  padding-top: 4px;
 }
